docs/docs/0.3.0/documentation/security.md
# Security

Kuma helps you secure your existing infrastructure with mTLS. The following sections cover details of how it works.

## Certificates

Kuma uses a built-in CA (Certificate Authority) to issue certificates for dataplanes. The root CA certificate is unique for each mesh
in the system. On Kubernetes, the root CA certificate is stored as a [Kubernetes Secret](https://kubernetes.io/docs/concepts/configuration/secret/).
On Universal, we leverage the same storage (Postgres) that is used for storing policies.
Certificates for dataplanes are ephemeral, re-created on dataplane restart and never persisted on disk.

Dataplane certificates generated by Kuma are X.509 certificates that are [SPIFFE](https://github.com/spiffe/spiffe/blob/master/standards/X509-SVID.md) compliant. The SAN of certificate is set to `spiffe://<mesh name>/<service name>`

At the moment, Kuma's builtin CA only supports auto-generated self-signed root CA certificates.

## Dataplane Token

In order to obtain an mTLS certificate from the server ([SDS](https://www.envoyproxy.io/docs/envoy/latest/configuration/security/secret) built-in in the control plane), a dataplane must prove it's identity.

### Kubernetes
On Kubernetes, a dataplane proves its identity by leveraging [ServiceAccountToken](https://kubernetes.io/docs/reference/access-authn-authz/service-accounts-admin/#service-account-automation) that is mounted in every pod.

### Universal

On Universal, a dataplane must be explicitly configured with a unique security token (Dataplane Token) that will be used to prove its identity.
Dataplane Token is a signed [JWT token](https://jwt.io) that the carries dataplane name and name of the mesh it's allowed to join to.
It is signed by an RSA key auto-generated by the control plane on first run. Tokens are not stored in the control plane,
the only thing that is stored is a signing key that is used to verify if a token is valid. 

You can generate token either by REST API
```bash
curl -XPOST http://localhost:5679/tokens --data '{"name:" "dp-echo-1", "mesh": "default"}'
```

or by using `kumactl`
```bash
kumactl generate dataplane-token --name=dp-echo-1 --mesh=default > /tmp/kuma-dp-echo1-token
``` 

The token should be stored in a file and then used when starting `kuma-dp`
```bash
$ kuma-dp run \
  --name=dp-echo-1 \
  --mesh=default \
  --cp-address=http://127.0.0.1:5681 \
  --dataplane-token-file=/tmp/kuma-dp-echo-1-token
```

#### Accessing Dataplane Token Server from a different machine

By default, the Dataplane Token Server is exposed only on localhost. If you want to generate tokens from a different machine than control plane you have to secure the connection:
1) Enable public server by setting `KUMA_DATAPLANE_TOKEN_SERVER_PUBLIC_ENABLED` to `true`. Make sure to specify hostname which can be used to access Kuma from other machine via `KUMA_GENERAL_ADVERTISED_HOSTNAME`.
2) Generate certificate for the HTTPS Dataplane Token Server and set via `KUMA_DATAPLANE_TOKEN_SERVER_PUBLIC_TLS_CERT_FILE` and `KUMA_DATAPLANE_TOKEN_SERVER_PUBLIC_TLS_KEY_FILE` config environment variable.
   For generating self signed certificate you can use `kumactl`
```bash
$ kumactl generate tls-certificate --cert-file=/path/to/cert --key-file=/path/to/key --type=server --cp-hostname=<name from KUMA_GENERAL_ADVERTISED_HOSTNAME>
```
3) Pick a public interface on which HTTPS server will be exposed and set it via `KUMA_DATAPLANE_TOKEN_SERVER_PUBLIC_INTERFACE`.
   Optionally pick the port via `KUMA_DATAPLANE_TOKEN_SERVER_PUBLIC_PORT`. By default, it will be the same as the port for the HTTP server exposed on localhost.
4) Generate one or more certificates for the clients of this server. Pass the path to the directory with client certificates (without keys) via `KUMA_DATAPLANE_TOKEN_SERVER_PUBLIC_CLIENT_CERTS_DIR`.
   For generating self signed client certificates you can use `kumactl`
```bash
$ kumactl generate tls-certificate --cert-file=/path/to/cert --key-file=/path/to/key --type=client
```
5) Configure `kumactl` with client certificate.
```bash
$ kumactl config control-planes add \
  --name <NAME> --address http://<KUMA_CP_DNS_NAME>:5681 \
  --dataplane-token-client-cert <CERT.PEM> \
  --dataplane-token-client-key <KEY.PEM>
```

## mTLS

Once a dataplane has proved its identity, it will be allowed to fetch its own identity certificate and a root CA certificate of the mesh.
When establishing a connection between two dataplanes each side validates each other dataplane certificate confirming the identity using the root CA of the mesh.

mTLS is _not_ enabled by default. To enable it, apply proper settings in [Mesh](/docs/0.3.0/policies/#mesh) policy.
Additionaly, when running on Universal you have to ensure that every dataplane in the mesh has been configured with a Dataplane Token.

### TrafficPermission
When mTLS is enabled, every connection between dataplanes is denied by default, so you have to explicitly allow it using [TrafficPermission](/docs/0.3.0/policies/#traffic-permissions).